Attempt to fix popup-code alignment
For some reason, I can get this to work in the inspector but I can't get it to work with embedded CSS.

--- a/css/other.less
+++ b/css/other.less
@@ -48,3 +48,7 @@ body {
         padding-right: 10px;
      }
 }
+
+ul + .popup-code {
+    margin-left: 1.6em;
+}
